--- a/ioprof/ioprof.vcxproj.filters
+++ b/ioprof/ioprof.vcxproj.filters
@@ -15,21 +15,21 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="pch.h">
+    <ClInclude Include="ioprof.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="IOCollector.h">
+    <ClInclude Include="ntdllapi.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="pch.cpp">
+    <ClCompile Include="ioprof.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="IOProfiler.cpp">
+    <ClCompile Include="Main.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="IOCollector.cpp">
+    <ClCompile Include="ntdllapi.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
